[package]
name = "crony"
version = "0.5.3"
edition = "2021"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
license = "Apache-2.0"
description = "A full-featured replacement for `cron` and `crontab`"
readme = "README.md"
repository = "https://github.com/ClementNerma/Crony"

[[bin]]
name = "crony"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
daemonize-me = "2.0.1"
dirs = "5.0.1"
once_cell = "1.19.0"
os_pipe = "1.2.1"
pomsky = "0.11.0"
pomsky-macro = "0.11.0"
rand = { version = "0.8.5", default-features = false, features = [
  "std",
  "std_rng",
] }
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tabular = "0.2.0"
time = { version = "0.3.36", features = [
  "local-offset",
  "parsing",
  "formatting",
  "serde",
] }

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-musl"]
